[metadata]
  name = app_paths
  description = 📂 Like appdirs but with Paths, path creation and async support.
  license = LGPL-3.0
  version = 0.0.6
  license_file = LICENSE
  long_description = file: README.md
  long_description_content_type = text/markdown
  classifiers =
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10

[options]
  zip_safe = True
  include_package_data = True
  url = https://github.com/alexdelorenzo/app_paths
  project_urls = https://github.com/alexdelorenzo/app_paths
  packages = app_paths
#   install_requires = 
#     typing-extensions>=3.10.0.0
